# ectt

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
ectt-oauth/: Cargo.toml  build.rs
ectt-oauth-demo/: Cargo.toml
ectt-oauth-demo/src/: main.rs
ectt-oauth/src/: cli.rs  main.rs  oauth.rs
ectt-oauth/src/tui/: address.rs  body.rs  combo.rs  compose.rs  help.rs  mod.rs  reading.rs
src/: cli.rs  config.rs  imap.rs  main.rs  oauth.rs
src/cli/: configure.rs  mod.rs
src/imap/: config.rs  mod.rs  oauth.rs  state.rs
src/smtp/: config.rs  mod.rs
src/tui/: address.rs  body.rs  compose.rs  focus.rs  inbox.rs  line.rs  loading.rs  login.rs  mod.rs  popup.rs  reading.rs
