[workspace.package]
edition = "2021"
authors = ["José Duarte <duarte.gmj@gmail.com>"]

[workspace]
resolver = "3"
members = ["ectt-oauth"]


[workspace.dependencies]
# Local dependencies
ectt-oauth = { path = "../ectt-oauth" }

# Others
tokio = "1.45.1"
clap = "4.5.39"
oauth2 = "5.0.0"
axum = "0.8.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tokio-util = "0.7.15"
thiserror = "2.0.3"
serde = "1"
imap = { version = "3.0.0-alpha.15", default-features = false }
rustls = "0.23.27"
serde_json = "1.0.104"
futures = "0.3.31"
color-eyre = "0.6.3"
crossterm = "0.28.1"
ratatui = "0.29.0"
tui-textarea = "0.7.0"
