[package]
name = "ectt"
authors = ["José Duarte <duarte.gmj@gmail.com>"]
edition = "2021"


[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
imap = { version = "3.0.0-alpha.15", default-features = false, features = [
    "rustls-tls",
] }
clap = { version = "4.5.39", features = ["derive"] }
oauth2 = { version = "5.0.0", features = ["reqwest-blocking"] }
axum = { version = "0.8.4", features = ["macros"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio-util = { version = "0.7.15", features = ["rt"] }
thiserror = { version = "2.0.3" }
serde = { version = "1", features = ["derive"] }
rustls = { version = "0.23.27" }
serde_json = { version = "1.0.104" }
futures = { version = "0.3.31" }
color-eyre = { version = "0.6.3" }
crossterm = { version = "0.28.1" }
ratatui = { version = "0.29.0" }
tui-textarea = { version = "0.7.0" }
itertools = { version = "0.14.0" }
dirs = "6.0.0"
tracing-appender = "0.2.3"
mailparse = "0.16.1"
chrono = "0.4.41"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0.104" }
