[package]
name = "ectt-oauth-demo"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
# Local
ectt-oauth = { path = "../ectt-oauth" }

# Others
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive"] }
oauth2 = { workspace = true, features = ["reqwest-blocking"] }
