[package]
name = "ectt-oauth"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
# Others
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive"] }
oauth2 = { workspace = true, features = ["reqwest-blocking"] }
axum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio-util = { workspace = true, features = ["rt"] }
serde = { workspace = true, features = ["derive"] }
imap = { workspace = true, default-features = false, features = ["rustls-tls"] }
rustls = { workspace = true }
base64 = { workspace = true }

[build-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
